conclusão do exercicios

--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index.html
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-página/index.html
@@ -6,9 +6,17 @@
   </head>
   <body>
     <h1>
-            <li> amigo 1</li>
-            <li> amigo 2</li>
-            <li> amigo 3</li>
+      <ul>
+
+        <li> amigo 1</li>
+        <li> amigo 2</li>
+        <li> amigo 3</li>
+      </ul>
+      <img src="https://imagens.brasil.elpais.com/resizer/0QXHuUV04jEZenTUg5j29tzRuZE=/1960x1470/arc-anglerfish-eu-central-1-prod-prisa.s3.amazonaws.com/public/TLL6LLHXS4SHHAL7ZTU5RMZN7U.jpg" width="300px
+      "
+    
+      height="300px"
+    />
 
     </h1>
   </body>
